--- a/sass/partials/_normalize.scss
+++ b/sass/partials/_normalize.scss
@@ -133,6 +133,8 @@ a {
     // 1
     
     background: transparent;
+    text-decoration: none;
+    border-bottom: 1px dotted;
 
     // 2
 
@@ -309,7 +311,8 @@ sub {
     menu,
     ol,
     ul {
-        margin: 1em 0;
+        margin: 0;
+        padding: 0;
     }
 }
 
