--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -10,3 +10,5 @@ $color8: #7F00FF; // purple
 $color9: #FF00FF; // magenta
 $color10: #000; // black
 $color11: #FFF; // white
+
+$blockquote: Constantia, "Lucida Bright", "Lucidabright", "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
