--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,4 +3,13 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-@import "compass/reset";
+// @import "compass/reset";
+@import "compass";
+@import "partials/variables";
+@import "partials/mixins";
+@import "partials/fonts";
+@import "partials/normalize";
+@import "partials/base";
+@import "partials/placeholders";
+@import "partials/layout";
+@import "partials/modules";
